Update first draft syntax errors

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -87,13 +87,13 @@ Bitcoin Safe brings modern Bitcoin libraries and decentralized communication
 tools together in one application built for long-term savings, showing how
 open-source development makes self-custody practical.
 
-[Bitcoin Safe][https://bitcoin-safe.org/en/]
-[from OpenSats][/blog/tenth-wave-of-bitcoin-grants#bitcoin-safe]
-[live transaction notifications][https://github.com/andreasgriffin/bitcoin-p2p]
-[Support][https://github.com/andreasgriffin/bitcoin-safe/releases/tag/1.1.0]
-[warns][https://github.com/andreasgriffin/bitcoin-safe/releases/tag/1.2.2]
-[`Compact Block Filters`][https://bitcoinops.org/en/topics/compact-block-filters/]
-[nostr][https://github.com/nostr-protocol/nostr]
+[Bitcoin Safe]: https://bitcoin-safe.org/en/
+[from OpenSats]: /blog/tenth-wave-of-bitcoin-grants#bitcoin-safe
+[live transaction notifications]: https://github.com/andreasgriffin/bitcoin-p2p
+[Support]: https://github.com/andreasgriffin/bitcoin-safe/releases/tag/1.1.0
+[warns]: https://github.com/andreasgriffin/bitcoin-safe/releases/tag/1.2.2
+[`Compact Block Filters`]: https://bitcoinops.org/en/topics/compact-block-filters/
+[nostr]: https://github.com/nostr-protocol/nostr
 
 ### Blixt Wallet
 
@@ -140,14 +140,14 @@ for secure Lightning applications. Ongoing progress on push-to-wake handling,
 platform support, and Lightning Service Provider compatibility continues this
 trajectory.
 
-[Blixt Wallet][https://blixtwallet.github.io/]
-[a grant from OpenSats][/blog/bitcoin-grants-july-2023#blixt-wallet]
-[`react-native-turbo-lnd`][https://github.com/hsjoberg/react-native-turbo-lnd]
-[`react-native-turbo-sqlite`][https://github.com/hsjoberg/react-native-turbo-sqlite]
-[`react-native-nitro-tor`][https://github.com/niteshbalusu11/react-native-nitro-tor]
-[updates to Neutrino][https://github.com/lightninglabs/neutrino/pull/300]
-[version 0.6.9-420][https://github.com/hsjoberg/blixt-wallet/releases/tag/v0.6.9-420]
-[`bLIP`][https://github.com/hsjoberg/blips/blob/lnurl-forwarding/blip-lnurlforward.md]
+[Blixt Wallet]: https://blixtwallet.github.io/
+[a grant from OpenSats]: /blog/bitcoin-grants-july-2023#blixt-wallet
+[`react-native-turbo-lnd`]: https://github.com/hsjoberg/react-native-turbo-lnd
+[`react-native-turbo-sqlite`]: https://github.com/hsjoberg/react-native-turbo-sqlite
+[`react-native-nitro-tor`]: https://github.com/niteshbalusu11/react-native-nitro-tor
+[updates to Neutrino]: https://github.com/lightninglabs/neutrino/pull/300
+[version 0.6.9-420]: https://github.com/hsjoberg/blixt-wallet/releases/tag/v0.6.9-420
+[`bLIP`]: https://github.com/hsjoberg/blips/blob/lnurl-forwarding/blip-lnurlforward.md
 
 ### Blitz Wallet
 
@@ -189,20 +189,20 @@ and coordination with upstream developers, Blitz contributes to the Bitcoin
 development stack, demonstrating how simplicity and sovereignty can align for a
 great user experience.
 
-[Blitz Wallet][https://blitzwalletapp.com/]
-[support][/blog/bitcoin-grants-july-2024-6th-wave#blitz-wallet]
-[`Progressive Web App`][https://github.com/BlitzWallet/blitz-web-app]
-[works on any browser][https://wallet.blitzwalletapp.com/]
-[point-of-sale tools][https://github.com/BlitzWallet/blitz-wallet-pos]
-[The Bitcoin Company][https://www.thebitcoincompany.com/]
-[PPQ AI][https://ppq.ai/]
-[LN VPN][https://lnvpn.net/]
-[SMS4Sats][https://sms4sats.com/]
-[lwk-rn][https://github.com/Blockstream/lwk-rn]
-[Breez Liquid SDK][https://github.com/BlitzWallet/BlitzWallet/pull/47]
-[React Native Firebase integration][https://github.com/BlitzWallet/BlitzWallet/pull/41]
-[nodeless mode][https://github.com/BlitzWallet/BlitzWallet/pull/49]
-[Spark][https://docs.spark.money/wallet/introduction]
+[Blitz Wallet]: https://blitzwalletapp.com/
+[support]: /blog/bitcoin-grants-july-2024-6th-wave#blitz-wallet
+[`Progressive Web App`]: https://github.com/BlitzWallet/blitz-web-app
+[works on any browser]: https://wallet.blitzwalletapp.com/
+[point-of-sale tools]: https://github.com/BlitzWallet/blitz-wallet-pos
+[The Bitcoin Company]: https://www.thebitcoincompany.com/
+[PPQ AI]: https://ppq.ai/
+[LN VPN]: https://lnvpn.net/
+[SMS4Sats]: https://sms4sats.com/
+[lwk-rn]: https://github.com/Blockstream/lwk-rn
+[Breez Liquid SDK]: https://github.com/BlitzWallet/BlitzWallet/pull/47
+[React Native Firebase integration]: https://github.com/BlitzWallet/BlitzWallet/pull/41
+[nodeless mode]: https://github.com/BlitzWallet/BlitzWallet/pull/49
+[Spark]: https://docs.spark.money/wallet/introduction
 
 ### Clams
 
@@ -255,16 +255,16 @@ To support developers, Clams released tools like the [BOLT12 Decoder] and
 node operation verifiable and user-controlled, improving both privacy and
 usability within the Lightning ecosystem.
 
-[Clams][https://clams.tech/]
-[by OpenSats][/blog/bitcoin-grants-december-2023#clams]
-[Remote v2][https://github.com/clams-tech/Remote/releases/tag/remote-2.0.0]
-[Version 2.1][https://github.com/clams-tech/Remote/releases/tag/remote-2.1.0]
-[full integration][https://github.com/clams-tech/clams-remote-startos]
-[`Plugins Dashboard`][https://github.com/clams-tech/Remote/pull/269]
-[BOLT12 Prisms][https://github.com/clams-tech/Remote/pull/281]
-[implemented][https://github.com/clams-tech/Remote/releases/tag/remote-2.5.0]
-[BOLT12 Decoder][https://github.com/clams-tech/bolt12-decoder-app]
-[detailed documentation][https://clams.tech/blog/]
+[Clams]: https://clams.tech/
+[by OpenSats]: /blog/bitcoin-grants-december-2023#clams
+[Remote v2]: https://github.com/clams-tech/Remote/releases/tag/remote-2.0.0
+[Version 2.1]: https://github.com/clams-tech/Remote/releases/tag/remote-2.1.0
+[full integration]: https://github.com/clams-tech/clams-remote-startos
+[`Plugins Dashboard`]: https://github.com/clams-tech/Remote/pull/269
+[BOLT12 Prisms]: https://github.com/clams-tech/Remote/pull/281
+[implemented]: https://github.com/clams-tech/Remote/releases/tag/remote-2.5.0
+[BOLT12 Decoder]: https://github.com/clams-tech/bolt12-decoder-app
+[detailed documentation]: https://clams.tech/blog/
 
 ### Cove
 
@@ -310,16 +310,16 @@ and usability in balance. Cove represents a practical evolution in mobile wallet
 design, helping new users start safely, while giving experienced users greater
 control, and reinforcing open standards that underpin the Bitcoin network.
 
-[Cove][https://covebitcoinwallet.com/]
-[support][/blog/bitcoin-grants-july-2024#cove]
-[BDK][https://bitcoindevkit.org/]
-[`TAPSIGNER`][https://tapsigner.com/]
-[sign transactions][https://github.com/notmandatory/rust-cktap/pull/29]
-[`BIP-329`][https://github.com/bitcoin/bips/blob/master/bip-0329.mediawiki]
-[Swift][https://github.com/bitcoinppl/bbqr-swift]
-[Android][https://central.sonatype.com/artifact/org.bitcoinppl/bbqr-android/overview]
-[`BBQr` animated-QR protocol][https://github.com/bitcoinppl/bbqr-ffi]
-[Fully Noded][https://github.com/Fonta1n3/FullyNoded]
+[Cove]: https://covebitcoinwallet.com/
+[support]: /blog/bitcoin-grants-july-2024#cove
+[BDK]: https://bitcoindevkit.org/
+[`TAPSIGNER`]: https://tapsigner.com/
+[sign transactions]: https://github.com/notmandatory/rust-cktap/pull/29
+[`BIP-329`]: https://github.com/bitcoin/bips/blob/master/bip-0329.mediawiki
+[Swift]: https://github.com/bitcoinppl/bbqr-swift
+[Android]: https://central.sonatype.com/artifact/org.bitcoinppl/bbqr-android/overview
+[`BBQr` animated-QR protocol]: https://github.com/bitcoinppl/bbqr-ffi
+[Fully Noded]: https://github.com/Fonta1n3/FullyNoded
 
 ### Satsigner
 
@@ -355,13 +355,13 @@ signer-first workflows and making multisignature use practical on mobile
 devices, Satsigner reinforces the principles of open verification and personal
 control that define Bitcoin self-custody.
 
-[Satsigner][https://satsigner.com/]
-[funding from OpenSats][/blog/bitcoin-grants-feb-2024#satsigner]
-[descriptor-native multisignature][https://github.com/satsigner/satsigner/commit/bb47b855b44bd9bffb7d18b57c64616a1b202b64]
-[`Electrum`][https://github.com/spesmilo/electrum]
-[`Sankey`][https://en.wikipedia.org/wiki/Sankey_diagram]
-[Sparrow][https://sparrowwallet.com/]
-[Specter][https://specter.solutions/]
+[Satsigner]: https://satsigner.com/
+[funding from OpenSats]: /blog/bitcoin-grants-feb-2024#satsigner
+[descriptor-native multisignature]: https://github.com/satsigner/satsigner/commit/bb47b855b44bd9bffb7d18b57c64616a1b202b64
+[`Electrum`]: https://github.com/spesmilo/electrum
+[`Sankey`]: https://en.wikipedia.org/wiki/Sankey_diagram
+[Sparrow]: https://sparrowwallet.com/
+[Specter]: https://specter.solutions/
 
 ---
 
@@ -387,3 +387,4 @@ financial independence is not an exception, but the norm.
 If you are a developer working on free and open-source software that helps
 Bitcoin flourish, we encourage you to [apply for
 funding](https://opensats.org/apply).
+
