Fix link formatting to relative link

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -386,5 +386,5 @@ financial independence is not an exception, but the norm.
 
 If you are a developer working on free and open-source software that helps
 Bitcoin flourish, we encourage you to [apply for
-funding](https://opensats.org/apply).
+funding](/apply).
 
