Edit to add em dashes

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -239,7 +239,7 @@ splitting across recipients.
 >interacting with these plugins requires command-line knowledge. Remote solves
 >this by providing the first comprehensive plugin dashboard. We also decided to
 >make Remote fully self-hostable. Now users can run their complete Lightning
->stack on Start9---Bitcoin node, CLN, and plugin interfaces---entirely on their
+>stack on Start9—Bitcoin node, CLN, and plugin interfaces—entirely on their
 >own hardware with intuitive access to advanced features.
 >
 ><cite>—John Gribbin</cite>
@@ -286,7 +286,7 @@ efficiency. Custom fee settings and local currency options provide clear
 spending control. A decoy PIN mode unlocks a limited version of the wallet under
 duress, adding security through plausible deniability.
 
->Cove isn't doing any one new thing---it's bringing all the right pieces
+>Cove isn't doing any one new thing—it's bringing all the right pieces
 >together. Coin control on a phone is hard to do well, and I'm proud of how
 >usable it turned out.
 >
