Slight revision on blixt quote for clarity

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -127,8 +127,8 @@ addresses, such as user@domain, while keeping custody local. A lightweight HTTP
 relay forwards payment requests to the recipient's wallet and returns the
 invoice for payment.
 
->Having a trust-minimized Lightning Address to a self-custodial wallet is a
->great option to have in a world of custodial Lightning Addresses.
+>Having a trust-minimized Lightning Address linked to a self-custodial wallet 
+>is a valuable option in a custodial Lightning world.
 >
 ><cite>—Hampus Sjöberg</cite>
 
