--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -44,6 +44,7 @@ changes so that you can continue building under sustainable conditions.
 - [Is it possible to renew or extend my grant?](#is-it-possible-to-renew-or-extend-my-grant)
 - [Can grants be part-time or only full-time?](#can-grants-be-part-time-or-only-full-time)
 - [Can a full-time grant be turned into a part-time grant?](#can-a-full-time-grant-be-turned-into-a-part-time-grant)
+- [Does OpenSats allow funding by multiple organizations at the same time?](#does-opensats-allow-funding-by-multiple-organizations-at-the-same-time)
 - [What should I do at the end of my grant?](#what-should-i-do-at-the-end-of-my-grant)
 
 ### I have a question; whom should I email?
@@ -290,6 +291,10 @@ of commitment with corresponding levels of financial support.
 If you are partway through a full-time grant and want to reduce your time
 commitment, [reach out to us][c]. We can discuss adjusting your grant based on a
 smaller time commitment.
+
+### Does OpenSats allow funding by multiple organizations at the same time?
+
+Yes, but you must disclose the terms of your other funding (e.g. grants) to OpenSats.
 
 ### What should I do at the end of my grant?
 
