Edit for better flow

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -16,16 +16,14 @@ evolve toward stronger privacy, smoother interoperability, and better usability.
 Over the past year, a new wave of development has advanced both on-chain and
 Lightning self-custody. Developers have improved the speed and reliability of
 mobile and desktop wallets, added advanced features once reserved for experts,
-and refined interfaces that make complex Bitcoin functions more intuitive. This
-progress shows that usability and technical depth can advance together without
-compromising security or control.
+and made complex Bitcoin functions more intuitive. This progress shows that ease
+of use and technical depth can advance together without compromising security or
+control.
 
-With support from OpenSats, the projects featured in this impact report
-represent advances in Bitcoin and Lightning wallet development. Together, they
-reinforce the open-source foundations that make self-custody practical and
-resilient for users at every level of experience.
+With support from OpenSats, the six projects featured in this impact report
+represent advances in Bitcoin and Lightning wallet development.
 
-The six projects highlighted in this impact report are:
+The projects highlighted in this impact report are:
 
 - [Bitcoin Safe](#bitcoin-safe)
 - [Blixt Wallet](#blixt-wallet)
