Publish Q3 2025 Financials in /transparency

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -47,6 +47,7 @@ as in the internal and external processes of our organization.
 - [2024](/docs/financials/2022-2024.pdf)
 - [2025-Q1](/docs/financials/2025-Q1-Q2.pdf)
 - [2025-Q2](/docs/financials/2025-Q1-Q2.pdf)
+- [2025-Q3](/docs/financials/2025-Q3.pdf)
 
 ## Project Grants
 
