Edit toward >> towards
Co-authored-by: Marnix Croes <93143998+MarnixCroes@users.noreply.github.com>

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -11,7 +11,7 @@ summary: "An impact report from the front-lines of bitcoin and Lightning wallet 
 Wallet and node software form the core of Bitcoin's free and open financial
 ecosystem. They define how people hold, send, and verify their bitcoin without
 depending on intermediaries. As the network grows, these tools continue to
-evolve toward stronger privacy, smoother interoperability, and better usability.
+evolve towards stronger privacy, smoother interoperability, and better usability.
 
 Over the past year, a new wave of development has advanced both on-chain and
 Lightning self-custody. Developers have improved the speed and reliability of
