Add missing URL for [unconfirmed transactions]
https://github.com/andreasgriffin/bitcoin-safe/releases/tag/1.4.0

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -89,6 +89,7 @@ open-source development makes self-custody practical.
 [live transaction notifications]: https://github.com/andreasgriffin/bitcoin-p2p
 [Support]: https://github.com/andreasgriffin/bitcoin-safe/releases/tag/1.1.0
 [warns]: https://github.com/andreasgriffin/bitcoin-safe/releases/tag/1.2.2
+[unconfirmed transactions]: https://github.com/andreasgriffin/bitcoin-safe/releases/tag/1.4.0
 [`Compact Block Filters`]: https://bitcoinops.org/en/topics/compact-block-filters/
 [nostr]: https://github.com/nostr-protocol/nostr
 
