Edit assume >> take
Co-authored-by: Marnix Croes <93143998+MarnixCroes@users.noreply.github.com>

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -180,7 +180,7 @@ for users who prefer not to maintain a live node.
 
 As the first live reference implementation of [Spark], Blitz offers insight for
 developers exploring the protocol. Its design uses the custodial ladder, a model
-that helps users begin with simple defaults and gradually assume full control.
+that helps users begin with simple defaults and gradually take full control.
 Each feature reduces mental effort while preserving sovereignty, showing that
 convenience and self-custody can progress together. Through its public codebases
 and coordination with upstream developers, Blitz contributes to the Bitcoin
