Edit "the network" >> "Bitcoin"
Co-authored-by: Marnix Croes <93143998+MarnixCroes@users.noreply.github.com>

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -383,7 +383,7 @@ empowering anyone, anywhere, to use bitcoin with confidence and autonomy.
 
 Together, these efforts demonstrate the steady evolution of Bitcoin as both
 technology and public good. Self-custody is becoming simpler, more intuitive,
-and more resilient. Each release brings the network closer to a future where
+and more resilient. Each release brings Bitcoin closer to a future where
 financial independence is not an exception, but the norm.
 
 <center>
