Edit quote to use verbatim version from Grantee

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -69,8 +69,8 @@ on centralized indexers. Project developers collaborated with the Bitcoin Dev
 Kit (`BDK`) community to refine handling of unconfirmed transactions, address
 lookahead, and encrypted storage, helping improve BDK-based wallets overall.
 
->Compact Block Filters offer fast performance while removing centralization
->points such as Electrum servers.
+>Compact Block Filters in wallets, like Bitcoin Safe, are the best way to have
+>fast UX while removing centralization points, such as electrum servers.
 >
 ><cite>—Andreas Griffin</cite>
 
