Edit to better clarify wallet warning feature
Updated the description of Bitcoin Safe wallet features, enhancing clarity on security measures and user protection against scams.

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -58,8 +58,8 @@ transaction notifications], removing the need for centralized servers. Users can
 see on-chain confirmations in real time while preserving privacy.
 
 [Support] for hardware wallets like Blockstream Jade Plus expanded compatibility
-and security. The wallet also [warns] about look-alike address scams and tracks
-[unconfirmed transactions] to reduce risk.
+and security. The wallet also [warns] about look-alike address scams to help users 
+avoid common attack patterns.
 
 Behind the interface, Bitcoin Safe is prepared for full adoption of [Compact
 Block Filters] (BIP157/158). Wallets download compact filters from peers and
@@ -89,7 +89,6 @@ open-source development makes self-custody practical.
 [live transaction notifications]: https://github.com/andreasgriffin/bitcoin-p2p
 [Support]: https://github.com/andreasgriffin/bitcoin-safe/releases/tag/1.1.0
 [warns]: https://github.com/andreasgriffin/bitcoin-safe/releases/tag/1.2.2
-[unconfirmed transactions]: https://github.com/andreasgriffin/bitcoin-safe/releases/tag/1.4.0
 [`Compact Block Filters`]: https://bitcoinops.org/en/topics/compact-block-filters/
 [nostr]: https://github.com/nostr-protocol/nostr
 
