Edit to make slight revisions based on grantee feedback
Updated the Blitz Wallet section to reflect recent changes in its functionality and design, including the transition to the Spark protocol and the introduction of a custodial ladder model for onboarding.

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -148,18 +148,25 @@ trajectory.
 
 ### Blitz Wallet
 
-[Blitz Wallet] is a self-custodial Bitcoin wallet that unifies Lightning,
-Liquid, and ecash balances in one app. Its goal is to make Bitcoin payments
-accessible while maintaining full control of funds.
+[Blitz Wallet] is a self-custodial Bitcoin ecosystem focused on making payments
+simple. Its main product, the Blitz Mobile App, previously unified Lightning,
+Liquid, and ecash balances into one platform and has now transitioned to the
+Spark protocol. The goal remains to make Bitcoin payments accessible while
+ensuring users maintain full control of their funds.
 
-Built with the `Breez SDK`, `Blockstream Greenlight`, and the `Blockstream Green
-Development Kit`, Blitz combines these open-source tools to provide a strong
-self-custodial foundation while using Boltz for automatic channel rebalancing.
-With OpenSats' [support], Blitz evolved from a hybrid prototype into a
-multi-protocol wallet. The latest version migrates to the Spark protocol, which
-enables receiving payments while offline, maintaining inbound capacity, and
-exiting directly to on-chain bitcoin. A new [`Progressive Web App`] version
-[works on any browser] without relying on the app store.
+Over the past year, Blitz refined its approach to onboarding new Bitcoin users
+through a “custodial ladder” model—starting with easy, guided defaults and
+progressing toward full self-custody. Built with the `Breez SDK`, `Blockstream
+Greenlight`, and the `Blockstream Green Development Kit`, Blitz combined these
+open-source tools to provide a strong foundation while using Boltz for automatic
+channel rebalancing. However, maintaining multiple networks introduced
+complexity and fragmented balances.
+
+With OpenSats' [support], Blitz streamlined its design into a simpler,
+Spark-based wallet. The latest version enables receiving payments while offline,
+maintaining inbound capacity, and exiting directly to on-chain bitcoin. A new
+[`Progressive Web App`] version [works on any browser] without relying on the
+app store.
 
 Blitz has integrated a built-in store, contact-based payments, and
 [point-of-sale tools]. Through integrations with services like [The Bitcoin
