Edit for refining description of Blitz Wallet's design and impact per grantee feedback.
Revised text to enhance clarity and flow regarding Blitz's contributions and design principles.

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -185,11 +185,10 @@ for users who prefer not to maintain a live node.
 ><cite>—Blake Kaufman</cite>
 
 As the first live reference implementation of [Spark], Blitz offers insight for
-developers exploring the protocol. Its design uses the custodial ladder, a model
-that helps users begin with simple defaults and gradually take full control.
-Each feature reduces mental effort while preserving sovereignty, showing that
-convenience and self-custody can progress together. Through its public codebases
-and coordination with upstream developers, Blitz contributes to the Bitcoin
+developers exploring the protocol. Each iteration of Blitz development continues
+to reduce mental effort while preserving sovereignty, showing that convenience
+and self-custody can progress together. Through its seven public codebases and
+coordination with upstream developers, Blitz contributes to the Bitcoin
 development stack, demonstrating how simplicity and sovereignty can align for a
 great user experience.
 
