Edit for technical accuracy, per grantee feedback.
Updated the architecture by transitioning to Spark, simplifying the integration of Lightning, Liquid, and swaps.

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -173,11 +173,9 @@ Blitz has integrated a built-in store, contact-based payments, and
 Company], [PPQ AI], [LN VPN], and [SMS4Sats], users can buy gift cards, access
 online services, and send messages using sats.
 
-To improve reliability and privacy, the project adopted Blockstream's [lwk-rn]
-library for Liquid integration on iOS and migrated to the [Breez Liquid SDK] for
-better swap handling and refunds. [React Native Firebase integration] added
-device attestation for backend security. Blitz also introduced a [nodeless mode]
-for users who prefer not to maintain a live node.
+The transition to Spark replaced earlier multi-network integrations, unifying
+what were once separate systems for Lightning, Liquid, and swaps into a simpler,
+more efficient architecture.
 
 >Simplicity of use is the difference between Bitcoin as a cypherpunk technology
 >and Bitcoin as a monetary revolution.
@@ -201,10 +199,6 @@ great user experience.
 [PPQ AI]: https://ppq.ai/
 [LN VPN]: https://lnvpn.net/
 [SMS4Sats]: https://sms4sats.com/
-[lwk-rn]: https://github.com/Blockstream/lwk-rn
-[Breez Liquid SDK]: https://github.com/BlitzWallet/BlitzWallet/pull/47
-[React Native Firebase integration]: https://github.com/BlitzWallet/BlitzWallet/pull/41
-[nodeless mode]: https://github.com/BlitzWallet/BlitzWallet/pull/49
 [Spark]: https://docs.spark.money/wallet/introduction
 
 ### Clams
