Edit to correct hyperlink forwarding

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -162,7 +162,7 @@ open-source tools to provide a strong foundation while using Boltz for automatic
 channel rebalancing. However, maintaining multiple networks introduced
 complexity and fragmented balances.
 
-With OpenSats' [support], Blitz streamlined its design into a simpler,
+With [OpenSats' support], Blitz streamlined its design into a simpler,
 Spark-based wallet. The latest version enables receiving payments while offline,
 maintaining inbound capacity, and exiting directly to on-chain bitcoin. A new
 [`Progressive Web App`] version [works on any browser] without relying on the
@@ -191,7 +191,7 @@ development stack, demonstrating how simplicity and sovereignty can align for a
 great user experience.
 
 [Blitz Wallet]: https://blitzwalletapp.com/
-[support]: /blog/bitcoin-grants-july-2024-6th-wave#blitz-wallet
+[OpenSats' support]: /blog/bitcoin-grants-july-2024-6th-wave#blitz-wallet
 [`Progressive Web App`]: https://github.com/BlitzWallet/blitz-web-app
 [works on any browser]: https://wallet.blitzwalletapp.com/
 [point-of-sale tools]: https://github.com/BlitzWallet/blitz-wallet-pos
