Edit to add hyperlink to previous announcement
Corrected wording for clarity regarding OpenSats' support.

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -269,7 +269,7 @@ usability within the Lightning ecosystem.
 wallets that focus on Lightning or multisignature setups, Cove offers a simple,
 self-custodial option compatible with hardware signing devices.
 
-OpenSats' [support] helped developer Praveen Perera advance Cove from prototype
+OpenSats' [support helped] developer Praveen Perera advance Cove from prototype
 to production, releasing it as a non-custodial, Bitcoin-only wallet on the iOS
 App Store. Written in `Rust` and integrated through Swift and Kotlin bindings
 built on the Bitcoin Development Kit ([BDK]), the app supports [`TAPSIGNER`] and
@@ -314,6 +314,7 @@ design, helping new users start safely, while giving experienced users greater
 control, and reinforcing open standards that underpin the Bitcoin network.
 
 [Cove]: https://covebitcoinwallet.com/
+[support helped]: https://opensats.org/blog/bitcoin-grants-july-2024#cove
 [BDK]: https://bitcoindevkit.org/
 [`TAPSIGNER`]: https://tapsigner.com/
 [`SATSCARD`]: https://coinkite.com/cards/satscard
