Edit to fix broken satscard url

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -317,7 +317,7 @@ control, and reinforcing open standards that underpin the Bitcoin network.
 [support helped]: https://opensats.org/blog/bitcoin-grants-july-2024#cove
 [BDK]: https://bitcoindevkit.org/
 [`TAPSIGNER`]: https://tapsigner.com/
-[`SATSCARD`]: https://coinkite.com/cards/satscard
+[`SATSCARD`]: https://store.coinkite.com/store/satscard
 [sign transactions]: https://github.com/notmandatory/rust-cktap/pull/29
 [`BIP-329`]: https://github.com/bitcoinppl/bip329
 [`rust-cktap`]: https://github.com/notmandatory/rust-cktap
