--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -294,7 +294,7 @@ smaller time commitment.
 
 ### Does OpenSats allow funding by multiple organizations at the same time?
 
-Yes, but you must disclose the terms of your other funding (e.g. grants) to OpenSats.
+Yes, provided you disclose the terms of your other funding (e.g. grants) to OpenSats.
 
 ### What should I do at the end of my grant?
 
