refactor: simplify BDK reference in Bitcoin Safe section
- Remove redundant 'Bitcoin Dev Kit' text and backticks around BDK
- Improve text flow by using just 'BDK' since it's already established as an acronym

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -65,8 +65,8 @@ Behind the interface, Bitcoin Safe is prepared for full adoption of [Compact
 Block Filters] (BIP157/158). Wallets download compact filters from peers and
 match them locally, removing address or xpub lookups against third-party
 servers. This improves privacy while remaining lightweight and reduces reliance
-on centralized indexers. Project developers collaborated with the Bitcoin Dev
-Kit (`BDK`) community to refine handling of unconfirmed transactions, address
+on centralized indexers. Project developers collaborated with the BDK
+community to refine handling of unconfirmed transactions, address
 lookahead, and encrypted storage, helping improve BDK-based wallets overall.
 
 >Compact Block Filters in wallets, like Bitcoin Safe, are the best way to have
