fix: remove backticks from LND and Neutrino in Blixt Wallet section
- Remove backticks around LND and Neutrino to maintain consistent formatting
- Improves readability by reducing unnecessary code formatting in prose

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -95,7 +95,7 @@ open-source development makes self-custody practical.
 ### Blixt Wallet
 
 [Blixt Wallet] is a non-custodial Bitcoin Lightning wallet for Android and iOS,
-focused on usability and control. Built with `LND` and `Neutrino`, it lets users
+focused on usability and control. Built with LND and Neutrino, it lets users
 run a full Lightning node directly on their device without relying on
 centralized services.
 
