refactor: convert Lightning Box to link reference
- Remove backticks around Lightning Box and convert to proper link reference
- Add GitHub repository link for Lightning Box
- Maintains consistency with other link references in the document

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -118,7 +118,7 @@ multiple peers in different regions, keeping connections steady and reducing
 delays during synchronization. These refinements address a long-standing
 challenge in mobile self-custody.
 
-The project also introduced `Lightning Box`, a trust-minimized version of the
+The project also introduced [Lightning Box], a trust-minimized version of the
 Lightning Address protocol. It lets users receive payments to human-readable
 addresses, such as user@domain, while keeping custody local. A lightweight HTTP
 relay forwards payment requests to the recipient's wallet and returns the
@@ -142,6 +142,7 @@ trajectory.
 [`react-native-turbo-lnd`]: https://github.com/hsjoberg/react-native-turbo-lnd
 [`react-native-turbo-sqlite`]: https://github.com/hsjoberg/react-native-turbo-sqlite
 [`react-native-nitro-tor`]: https://github.com/niteshbalusu11/react-native-nitro-tor
+[Lightning Box]: https://github.com/hsjoberg/lightning-box
 [updates to Neutrino]: https://github.com/lightninglabs/neutrino/pull/300
 [version 0.6.9-420]: https://github.com/hsjoberg/blixt-wallet/releases/tag/v0.6.9-420
 [`bLIP`]: https://github.com/hsjoberg/blips/blob/lnurl-forwarding/blip-lnurlforward.md
